fixed overflow and button height in rocket container

--- a/static/css/windows.css
+++ b/static/css/windows.css
@@ -153,7 +153,8 @@ body{
     width: 100%;
     position: absolute;
     display: none;
-    overflow-x:hidden;
+    top: 0;
+    left: 0;
   }
   
   #rocket-container canvas{
